@@ -134,7 +134,7 @@ public class OceanizedEnderinaEntity extends SeaMonster implements RangedAttackM
 		double vx = toX - fromX;
 		double vy = toY - fromY;
 		double vz = toZ - fromZ;
-		double size = Math.max(Math.min(Math.round(Math.sqrt(vx * vx + vy * vy + vz * vz)), 32), 1);
+		double size = Math.clamp(Math.round(Math.sqrt(vx * vx + vy * vy + vz * vz)), 1, 32);
 		for (int index0 = 0; index0 < (int) size; index0++) {
 			if (world instanceof ServerLevel serverLevel) {
 				serverLevel.sendParticles(CAParticles.EDERMAN_PTC.get(), fromX + (vx / size) * index0, fromY + (vy / size) * index0 + 1, fromZ + (vz / size) * index0, 1, 0, 0, 0, 0.01);
@@ -293,7 +293,7 @@ public class OceanizedEnderinaEntity extends SeaMonster implements RangedAttackM
 	private boolean canEnterPhaseTwo(DamageSource source) {
 		Entity attacker = source.getEntity();
 		if (attacker == null) return false;
-		if (attacker instanceof LivingEntity living && living.getOffhandItem().is(CAItems.ENDERINA_SPAWNER.get())) return true;
+		if (attacker instanceof LivingEntity living && living.getOffhandItem().is(CAItems.OCEANIZED_ENDER_DRAGON_SPAWN_EGG.get())) return true;
 		if (attacker.getType().is(EntityUtils.OCEAN_OFFSPRING)) return false;
 		if (attacker instanceof TamableAnimal tamable && tamable.isTame()) return false;
 		return !(attacker instanceof Player) && !attacker.getType().is(EntityUtils.HUMAN);
